[package]
name = "radio_datetime_analyzer"
version = "0.1.2"
edition = "2021"
authors = [ "René Ladan <rene0+github@freedom.nl>" ]
description = "Analyzer for log files of time station decoders."
repository = "https://github.com/rene0/radio_datetime_analyzer"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcf77_utils = "0.5.0"
msf60_utils = "0.3.2"
radio_datetime_utils = "0.5.0"
